--- a/location.html
+++ b/location.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<!-- Cyril Vedder          Project 4 CIS 115        2/2/14 -->
+	<!-- Cyril Vedder          Project 4-->
 
 	<head>
 		<title>Project 4</title>
